--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,3 +37,16 @@
     transform: rotate(360deg);
   }
 }
+
+.headingEmoji {
+  animation: rotateEmoji 5s linear infinite;
+}
+
+@keyframes rotateEmoji {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
