--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,45 +1,46 @@
 .App {
-  text-align: center;
-}
+      max-width: 1400px;
+      text-align: center;
+    }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    .App-logo {
+      height: 40vmin;
+      pointer-events: none;
+    }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    @media (prefers-reduced-motion: no-preference) {
+      .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+      }
+    }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    .App-header {
+      background-color: #282c34;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: calc(10px + 2vmin);
+      color: white;
+    }
 
-.App-link {
-  color: #61dafb;
-}
+    .App-link {
+      color: #61dafb;
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+    @keyframes App-logo-spin {
+      from {
+        transform: rotate(0deg);
+      }
 
-  to {
-    transform: rotate(360deg);
-  }
-}
+      to {
+        transform: rotate(360deg);
+      }
+    }
 
 .headingEmoji {
-  animation: rotateEmoji 5s linear infinite;
+  animation: rotateEmoji 5s infinite;
 }
 
 @keyframes rotateEmoji {
@@ -49,4 +50,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+.nav-button {
+  padding: 5px;
+  margin-right: 10px;
+  background-color: #61dafb;
+  border-radius: 5px;
+  //height: 30px;
 }
